Test scripts now take a policy file - test.policy